# ENJMIN_ProceduralAnimation

./: .gitignore  CMakeLists.txt
src/: camera.h  drawbuffer.cpp  drawbuffer.h  libs.cpp  libs.h  main.cpp  renderapi.cpp  renderapi.h  renderengine.cpp  renderengine.h  shader.cpp  shader.h  viewer.cpp  viewer.h
src/shaders/: shader_2d.frag  shader_2d.vert  shader_3d.frag  shader_3d.vert  shader_3d_custom.vert
